build,watchコマンド作成

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>Browzection Demo</title>
+    <title>Browzection2 Demo</title>
   </head>
-  <body></body>
+  <body>
+    <p>test</p>
+  </body>
 </html>
